--- a/.github/workflows/Documentor.yml
+++ b/.github/workflows/Documentor.yml
@@ -12,15 +12,21 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: [1.5.0]
-        julia-arch: [x86]
+        julia-version: ['1.3', 'nightly']
+        julia-arch: [x64, x86]
         os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
         with:
-          version: '1.6'
-        
+          version: ${{ matrix.julia-version }}
+          arch: ${{ matrix.julia-arch }}
+      - uses: julia-actions/julia-buildpkg@latest
+      - uses: julia-actions/julia-runtest@latest
+      - uses: codecov/codecov-action@v2
+        with:
+          files: lcov.info
+               
       - name: Setup .NET Core # Required to execute ReportGenerator
         uses: actions/setup-dotnet@v1
         with:
