--- a/.github/workflows/Documentor.yml
+++ b/.github/workflows/Documentor.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -21,8 +21,31 @@ jobs:
         with:
           files: lcov.info
                
-      - name: Build and deploy
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # If authenticating with SSH deploy key
-        run: julia --project=docs/ docs/make.jl
+  docs:
+      name: Documentation
+      runs-on: ubuntu-latest
+      steps:
+        # Cancel ongoing documentation build if pushing to branch again before the previous
+        # build is finished.
+        - name: Cancel ongoing documentation builds for previous commits
+          uses: styfle/cancel-workflow-action@0.6.0
+          with:
+            access_token: ${{ github.token }}
+
+        # Build docs
+        - uses: actions/checkout@v2
+        - uses: julia-actions/setup-julia@v1
+          with:
+            version: '1'
+        - name: Instantiate and install dependencies
+          run: |
+            julia --project=docs -e '
+                using Pkg
+                Pkg.develop(PackageSpec(path=pwd()))
+                Pkg.instantiate()'
+        - name: Generate documentation and deploy
+          env: # needed for pushing to gh-pages branch
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+          run:
+            julia --project=docs docs/make.jl
