--- a/.github/workflows/Documentor.yml
+++ b/.github/workflows/Documentor.yml
@@ -49,3 +49,17 @@ jobs:
             DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
           run:
             julia --project=docs docs/make.jl
+  # coverage_report:
+  #     - name: Setup .NET Core # Required to execute ReportGenerator
+  #       uses: actions/setup-dotnet@v1
+  #       with:
+  #         dotnet-version: 6.0.101
+
+  #     - name: ReportGenerator
+  #       uses: danielpalme/ReportGenerator-GitHub-Action@5.0.2
+  #       with:
+  #           reports: 'lcov.info' # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+  #           targetdir: 'docs/src/coverage' # REQUIRED # The directory where the generated report should be saved.
+  #           reporttypes: 'HtmlInline;Badges;TextSummary' # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, JsonSummary, Latex, LatexSummary, lcov, MHtml, PngChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
+  #           verbosity: 'Info' # The verbosity level of the log messages. Values: Verbose, Info, Warning, Error, Off
+  #           tag: '${{ github.run_number }}_${{ github.run_id }}' # Optional tag or build version.
