--- a/Project.toml
+++ b/Project.toml
@@ -19,6 +19,7 @@ JSON3 = "1"
 JSONPointer = "0.3"
 OrderedCollections = "1"
 StructTypes = "1"
+Tables = "1"
 XLSX = "^0.5.8, 0.7"
 julia = "^1.3"
 
