--- a/.github/workflows/Documentor.yml
+++ b/.github/workflows/Documentor.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           files: lcov.info
   report_coverage:
+      runs-on: ubuntu-latest
       steps:
         - name: Setup .NET Core # Required to execute ReportGenerator
           uses: actions/setup-dotnet@v1
