--- a/.github/workflows/Documentor.yml
+++ b/.github/workflows/Documentor.yml
@@ -8,35 +8,30 @@ on:
   pull_request:
 
 jobs:
-  generate_testcoverage:
+  report_testcoverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@latest
+      - name: RunTests
+        uses: actions/checkout@v2
+        uses: julia-actions/setup-julia@latest
         with:
-          version: '1.6'
-      - uses: julia-actions/julia-buildpkg@latest
-      - uses: julia-actions/julia-runtest@latest
-      - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v2
+          version: '1.7'
+        uses: julia-actions/julia-buildpkg@latest
+        uses: julia-actions/julia-runtest@latest
+        uses: julia-actions/julia-processcoverage@v1
+      - name: Setup .NET Core # Required to execute ReportGenerator
+        uses: actions/setup-dotnet@v1
         with:
-          files: lcov.info
-  report_coverage:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Setup .NET Core # Required to execute ReportGenerator
-          uses: actions/setup-dotnet@v1
-          with:
-            dotnet-version: 6.0.101
+          dotnet-version: 6.0.101
 
-        - name: ReportGenerator
-          uses: danielpalme/ReportGenerator-GitHub-Action@5.0.2
-          with:
-              reports: 'lcov.info' # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
-              targetdir: 'docs/src/coverage' # REQUIRED # The directory where the generated report should be saved.
-              reporttypes: 'HtmlInline;Badges;TextSummary' # The output formats and scope (separated by semicolon) 
-              verbosity: 'Info' # The verbosity level of the log messages. Values: Verbose, Info, Warning, Error, Off
-              tag: '${{ github.run_number }}_${{ github.run_id }}' # Optional tag or build version.            
+      - name: ReportGenerator
+        uses: danielpalme/ReportGenerator-GitHub-Action@5.0.2
+        with:
+            reports: 'lcov.info' # REQUIRED # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
+            targetdir: 'docs/src/coverage' # REQUIRED # The directory where the generated report should be saved.
+            reporttypes: 'HtmlInline;Badges;TextSummary' # The output formats and scope (separated by semicolon) 
+            verbosity: 'Info' # The verbosity level of the log messages. Values: Verbose, Info, Warning, Error, Off
+            tag: '${{ github.run_number }}_${{ github.run_id }}' # Optional tag or build version.            
   docs:
       name: Documentation
       runs-on: ubuntu-latest
