--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "XLSXasJSON"
 uuid = "8c9e00cc-ccf1-11e8-3de6-5b028f480d9e"
-author = ["김용희 <yongheekim@devsisters.com>"]
+author = ["YongheeKim <masterplanf@gmail.com"]
 version = "0.4.1"
 
 [deps]
