--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ OrderedCollections = "1"
 PrettyTables = "1"
 StructTypes = "1"
 Tables = "1"
-XLSX = "^0.5.8, 0.7"
+XLSX = "^0.5.8, 0.7, 0.8"
 julia = "^1.3"
 
 [extras]
