--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,10 @@
 name = "XLSXasJSON"
 uuid = "8c9e00cc-ccf1-11e8-3de6-5b028f480d9e"
 author = ["YongheeKim <masterplanf@gmail.com>"]
-version = "0.4.1"
+version = "0.5.0"
 
 [deps]
-JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JSONPointer = "cc3ff66e-924d-4e6b-b111-1d9960e4bba9"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
@@ -15,8 +15,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
-JSON3 = "1"
-JSONPointer = "0.3"
+JSONPointer = "0.4"
 OrderedCollections = "1"
 PrettyTables = "1, 2"
 StructTypes = "1"
