CompatHelper: bump compat for JSONPointer to 0.4, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 JSON3 = "1"
-JSONPointer = "0.3"
+JSONPointer = "0.3, 0.4"
 OrderedCollections = "1"
 PrettyTables = "1, 2"
 StructTypes = "1"
