--- a/Project.toml
+++ b/Project.toml
@@ -10,14 +10,13 @@ OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
-StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
+JSONPointer = "^0.4"
 OrderedCollections = "1"
 PrettyTables = "1, 2"
-StructTypes = "1"
 Tables = "1"
 XLSX = "^0.5.8, 0.7, 0.8"
 julia = "^1.3"
