--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
+JSON = "0.21"
 JSONPointer = "^0.4"
 OrderedCollections = "1"
 PrettyTables = "1, 2"
